# recipe

./: .gitignore  README.md  pyproject.toml
src/whats_for_dinner/: main.py  recipe.py
